# GenIni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ninja  genini.cc  rules.json
